# AsioBasic

./: CMakeLists.txt
libs/: asio
libs/NetCommon/: CMakeLists.txt  NetMessage.cpp
libs/NetCommon/include/: NetCommon.h  NetMessage.h  net_client.h  net_client.hpp  net_common.h  net_connection.h  net_connection.hpp  net_message.h  net_message.hpp  net_server.h  net_server.hpp  net_tsqueue.h  net_tsqueue.hpp
src/: main.cpp  main_0.cpp  main_1.cpp  shutendouji_server.hpp
src/include/: AsioConfig.h  AsioConfig.h.in
